--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -22,3 +22,14 @@
 .sidebar-none {
     display: none;
 }
+
+.side-bar-list{
+    list-style-type: none;
+    padding: 0px;
+    text-align: center;
+}
+
+li{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
