--- a/src/assets/styles/target.css
+++ b/src/assets/styles/target.css
@@ -11,7 +11,7 @@
 
 .target-header{
 border-bottom: 1px gray solid;
-padding: 10px;
+padding: 14px;
 }
 
 .card {
@@ -52,6 +52,7 @@ padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .progress-bar {
@@ -61,3 +62,14 @@ padding: 10px;
 /* .progress-bar-content {
     width: 50%;
 }  */
+
+.target-card-icons{
+    padding: 5px;
+    background-color: beige;
+    margin-right: 5px;
+}
+
+.card-subtitle{
+    display: flex;
+    align-items: center;
+}
