--- a/src/assets/styles/investorDetails.css
+++ b/src/assets/styles/investorDetails.css
@@ -1,6 +1,7 @@
 .investor-content-wrapper {
     margin: 13px;
     border: 1px solid;
-    border-radius: 8px
-
+    border-radius: 8px;
+    min-width: 300px;
+    overflow-x: scroll;
 }
