--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -8,7 +8,7 @@
     text-align: center;
     justify-content: center;
     display: flex;
-    height: 113px;
+    height: 67px;
     align-items: center;
 }
 
@@ -38,6 +38,16 @@
 li{
     margin-top: 40px;
     margin-bottom: 40px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+li:hover{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    color: blue;
 }
 
 .sidebar-footer {
@@ -47,4 +57,18 @@ li{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.footer-element{
+    padding: 11px;
+    border-radius: 15px;
+    background-color: #d1e7fb;
+}
+
+ul{
+    padding-left: 0px;
+}
+
+.headphones{
+    margin-right: 20px;
 }
